# jesse-trading-strategies

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  routes.py
docs/: AGENTS.md  README.md  smc_fvg_pinbar_debug_notes.md
docs/notes/: smc_fvg_pinbar_notes.md
docs/plans/: smc_fvg_pinbar_autoresearch_plan.md  smc_fvg_pinbar_test_plan.md
docs/reference/: access.md  realtime_test.md
docs/research/: smc_fvg_pinbar_all_futures_recent_2026_03_2026_04.md  smc_fvg_pinbar_backtest_results.md
docs/state/: smc_fvg_pinbar_state.md
scripts/: backtest_smc_fvg_pinbar_all_futures.py  seed_smc_fvg_pinbar_data.py  smc_fvg_pinbar_data.py  sweep_smc_fvg_pinbar_displacement_variants.py  sweep_smc_fvg_pinbar_engulfing_union.py  sweep_smc_fvg_pinbar_entry_signal_filters.py  sweep_smc_fvg_pinbar_entry_variants.py  sweep_smc_fvg_pinbar_narrow_pinbar_variants.py  sweep_smc_fvg_pinbar_signal_variants.py  sweep_smc_fvg_pinbar_trend_body_refinements.py
storage/: README.md
storage/temp/: 1703689200000-1704067140000-Binance Perpetual Futures-BTC-USDT.pickle  1703878200000-1704067140000-Binance Perpetual Futures-BTC-USDT.pickle  1740495600000-1740873540000-Binance Perpetual Futures-BTC-USDT.pickle  1740873600000-1740959940000-Binance Perpetual Futures-BTC-USDT.pickle  1740873600000-1741046340000-Binance Perpetual Futures-BTC-USDT.pickle  1748617200000-1748995140000-Binance Perpetual Futures-BTC-USDT.pickle  cache_database.pickle
strategies/EMA50_200/: __init__.py
strategies/SMC_FVG_PinBar/: PLAN.md  README.md  __init__.py
(+6 files in other folders)
