[project]
name = "jessie-trading-strategies"
version = "0.1.0"
description = "Jesse strategy collection for BTC-USDT futures with EMA crossover and SMC/FVG setups"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "jesse",
    "setuptools<70",
    "pip",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = []
